// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner Matches snapshot (desktop) 1`] = `
.c0 {
  background-color: #FFB302;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.75rem;
  font-weight: 600;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  line-height: 1.25rem;
  padding: var(--spacing-2x);
  width: 100%;
}

.c0 svg {
  color: #000000;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: var(--spacing-2x);
}

.c1 p {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin: 0;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  border: 0;
  cursor: pointer;
  height: 24px;
  margin-left: var(--spacing-2x);
  padding: 0;
}

<div
  className="c0"
  data-testid="container"
  role="alert"
>
  <div
    className="c1"
  >
    <svg
      aria-hidden="true"
      color="currentColor"
      focusable={false}
      height="24"
      width="24"
    />
    <p>
      WARNING! Lorem ipsum
    </p>
  </div>
  <button
    aria-label="Close"
    className="c2"
    data-testid="closeButton"
    onClick={[Function]}
  >
    <svg
      color="currentColor"
      focusable={false}
      height="16"
      width="16"
    />
  </button>
</div>
`;

exports[`Banner Matches snapshot (mobile) 1`] = `
.c0 {
  background-color: #A40C2E;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.46px;
  -moz-letter-spacing: 0.46px;
  -ms-letter-spacing: 0.46px;
  letter-spacing: 0.46px;
  line-height: 1.25rem;
  padding: var(--spacing-3x) var(--spacing-2x);
  width: 100%;
}

.c0 svg {
  color: #FFFFFF;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: var(--spacing-2x);
}

.c1 p {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin: 0;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  border: 0;
  cursor: pointer;
  height: 24px;
  margin-left: var(--spacing-2x);
  padding: 0;
}

<div
  className="c0"
  data-testid="container"
  role="alert"
>
  <div
    className="c1"
  >
    <svg
      aria-hidden="true"
      color="currentColor"
      focusable={false}
      height="24"
      width="24"
    />
    <p>
      ERROR! Lorem ipsum
    </p>
  </div>
  <button
    aria-label="Close"
    className="c2"
    data-testid="closeButton"
    onClick={[Function]}
  >
    <svg
      color="currentColor"
      focusable={false}
      height="20"
      width="20"
    />
  </button>
</div>
`;
